<resources>
    <string name="app_name">MyWeather</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Settings</string>
    <string name="search">search</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_pt">Portuguese</string>
    <string name="settings_language_eng">English</string>
    <string name="settings_tempunit_c" translatable="false">ºC</string>
    <string name="settings_tempunit_f" translatable="false">ºF</string>
    <string name="settings_tempunit_k" translatable="false">ºK</string>
    <string name="save">Save</string>
    <string name="settings_tempunit">Unit Temperature</string>
    <string name="wind">wind</string>
    <string name="clouds">clouds</string>
    <string name="hpa">hpa</string>
</resources>